on Xen the GDT has to be updated though HYPERVISOR_update_descriptor(). Export i386/i386/gdt.c:update_descriptor() and use it in x86_set_sdbase(), as a direct write to the GDT will cause a kernel trap. Fix PR port-xen/41401.